# AndroidUILabelTool

./: .gitignore  README.md
android-ui-label-tool/: README.md  pyproject.toml
android-ui-label-tool/android_ui_label_tool/: __main__.py
