[tool.poetry]
name = "android-ui-label-tool"
version = "0.1.0"
description = ""
authors = ["jackson <jackson.kubin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.4.0"
typed-argument-parser = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
